--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,12 @@
   "[solidity]": {
     "editor.defaultFormatter": "NomicFoundation.hardhat-solidity"
   },
-  "cSpell.words": ["nomicfoundation"],
+  "cSpell.words": [
+    "Initializable",
+    "Memecoin",
+    "Memecoins",
+    "nomicfoundation",
+    "Reentrancy"
+  ],
   "typescript.tsdk": "node_modules/typescript/lib"
 }
