--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@nomicfoundation/hardhat-verify": "^2.0.12",
     "@nomicfoundation/ignition-core": "^0.15.8",
     "@openzeppelin/contracts": "^5.1.0",
+    "@openzeppelin/contracts-upgradeable": "^5.1.0",
     "@typechain/ethers-v6": "^0.5.1",
     "@typechain/hardhat": "^9.1.0",
     "@types/chai": "^5.0.1",
@@ -48,6 +49,7 @@
     "@types/node": "^22.10.2",
     "@typescript-eslint/eslint-plugin": "^8.18.1",
     "@typescript-eslint/parser": "^8.18.1",
+    "@uniswap/v3-periphery": "^1.4.4",
     "chai": "^4.3.7",
     "dotenv": "^16.4.7",
     "envalid": "^8.0.0",
