fix namings to publish

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@borodutch/smart-contract-starter",
+  "name": "@big-whale-labs/battle-dot-fun-contracts",
   "version": "0.0.1",
-  "description": "A starter for Solidity smart contracts for Ethereum",
+  "description": "Battle.fun contracts",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Borodutch/smart-contract-starter"
+    "url": "git+https://github.com/BigWhaleLabs/battle-dot-fun-contracts"
   },
   "license": "MIT",
   "np": {
