--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "build": "yarn clean && npx hardhat compile",
     "clean": "npx hardhat clean",
     "test": "npx hardhat test",
-    "deploy": "npx hardhat run --network deploy scripts/deploy.ts",
+    "deploy-mainnet": "npx hardhat run --network mainnet scripts/deploy.ts",
+    "deploy-testnet": "npx hardhat run --network testnet scripts/deploy.ts",
     "eth-lint": "yarn solhint 'contracts/**/*.sol'",
     "lint": "prettier --check . && eslint --max-warnings 0 scripts test && yarn eth-lint",
     "release": "np",
