--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "@types/node": "^22.10.2",
     "@typescript-eslint/eslint-plugin": "^8.18.1",
     "@typescript-eslint/parser": "^8.18.1",
-    "@uniswap/v3-periphery": "^1.4.4",
+    "@uniswap/swap-router-contracts": "^1.3.1",
     "chai": "^4.3.7",
     "dotenv": "^16.4.7",
     "envalid": "^8.0.0",
